# component-email-smtp-sender

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bitbucket-pipelines.yml  custom_stack_override.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md
component_config/sample-config/: config.json
component_config/sample-config/in/files/: template.html  template.txt  test_csv.csv
component_config/sample-config/in/tables/: test.csv  test.csv.manifest
scripts/: build_n_test.sh
src/: client.py  component.py  configuration.py  stack_overrides.py
tests/: test_placeholder.py  test_validation.py
