[project]
name = "component-email-smtp-sender"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dataconf>=3.5.0",
    "frozendict>=2.4.6",
    "jinja2>=3.1.6",
    "kbcstorage>=0.9.2",
    "keboola-component>=1.6.10",
    "msal>=1.33.0",
    "o365>=2.1.4",
    "pysocks>=1.7.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
