[project]
name = "component-email-smtp-sender"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = [
    "keboola-component>=1.4.4",
    "kbcstorage>=0.7.2",
    "dataconf>=2.3.0",
    "Jinja2>=3.1.3",
    "frozendict>=2.4.0",
    "PySocks>=1.7.1",
    "O365>=2.0.33",
    "msal>=1.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
